--- a/Lesson1_getting_started.ipynb
+++ b/Lesson1_getting_started.ipynb
@@ -20,6 +20,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "8f226205",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#!pip install pandas numpy matplotlib seaborn "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "id": "411b8693",
    "metadata": {},
