--- a/Lesson2.ipynb
+++ b/Lesson2.ipynb
@@ -1682,8 +1682,549 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 94,
    "id": "087e4302",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'the zen of python  by tim peters\\n\\nbeautiful is better than ugly \\nexplicit is better than implicit \\nsimple is better than complex \\ncomplex is better than complicated \\nflat is better than nested \\nsparse is better than dense \\nreadability counts \\nspecial cases aren t special enough to break the rules \\nalthough practicality beats purity \\nerrors should never pass silently \\nunless explicitly silenced \\nin the face of ambiguity  refuse the temptation to guess \\nthere should be one   and preferably only one   obvious way to do it \\nalthough that way may not be obvious at first unless you re dutch \\nnow is better than never \\nalthough never is often better than *right* now \\nif the implementation is hard to explain  it s a bad idea \\nif the implementation is easy to explain  it may be a good idea \\nnamespaces are one honking great idea    let s do more of those '"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#chuẩn hóa\n",
+    "message = message.lower()\n",
+    "\n",
+    "special_letter = ['.', ',', '!', '?', ':', ';', '-', '_', '(', ')', '\"', \"'\"]\n",
+    "for letter in special_letter:\n",
+    "    message = message.replace(letter, ' ')  # remove special characters \n",
+    "message "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "id": "65e36aaf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['the',\n",
+       " 'zen',\n",
+       " 'of',\n",
+       " 'python',\n",
+       " 'by',\n",
+       " 'tim',\n",
+       " 'peters',\n",
+       " 'beautiful',\n",
+       " 'is',\n",
+       " 'better',\n",
+       " 'than',\n",
+       " 'ugly',\n",
+       " 'explicit',\n",
+       " 'is',\n",
+       " 'better',\n",
+       " 'than',\n",
+       " 'implicit',\n",
+       " 'simple',\n",
+       " 'is',\n",
+       " 'better',\n",
+       " 'than',\n",
+       " 'complex',\n",
+       " 'complex',\n",
+       " 'is',\n",
+       " 'better',\n",
+       " 'than',\n",
+       " 'complicated',\n",
+       " 'flat',\n",
+       " 'is',\n",
+       " 'better',\n",
+       " 'than',\n",
+       " 'nested',\n",
+       " 'sparse',\n",
+       " 'is',\n",
+       " 'better',\n",
+       " 'than',\n",
+       " 'dense',\n",
+       " 'readability',\n",
+       " 'counts',\n",
+       " 'special',\n",
+       " 'cases',\n",
+       " 'aren',\n",
+       " 't',\n",
+       " 'special',\n",
+       " 'enough',\n",
+       " 'to',\n",
+       " 'break',\n",
+       " 'the',\n",
+       " 'rules',\n",
+       " 'although',\n",
+       " 'practicality',\n",
+       " 'beats',\n",
+       " 'purity',\n",
+       " 'errors',\n",
+       " 'should',\n",
+       " 'never',\n",
+       " 'pass',\n",
+       " 'silently',\n",
+       " 'unless',\n",
+       " 'explicitly',\n",
+       " 'silenced',\n",
+       " 'in',\n",
+       " 'the',\n",
+       " 'face',\n",
+       " 'of',\n",
+       " 'ambiguity',\n",
+       " 'refuse',\n",
+       " 'the',\n",
+       " 'temptation',\n",
+       " 'to',\n",
+       " 'guess',\n",
+       " 'there',\n",
+       " 'should',\n",
+       " 'be',\n",
+       " 'one',\n",
+       " 'and',\n",
+       " 'preferably',\n",
+       " 'only',\n",
+       " 'one',\n",
+       " 'obvious',\n",
+       " 'way',\n",
+       " 'to',\n",
+       " 'do',\n",
+       " 'it',\n",
+       " 'although',\n",
+       " 'that',\n",
+       " 'way',\n",
+       " 'may',\n",
+       " 'not',\n",
+       " 'be',\n",
+       " 'obvious',\n",
+       " 'at',\n",
+       " 'first',\n",
+       " 'unless',\n",
+       " 'you',\n",
+       " 're',\n",
+       " 'dutch',\n",
+       " 'now',\n",
+       " 'is',\n",
+       " 'better',\n",
+       " 'than',\n",
+       " 'never',\n",
+       " 'although',\n",
+       " 'never',\n",
+       " 'is',\n",
+       " 'often',\n",
+       " 'better',\n",
+       " 'than',\n",
+       " '*right*',\n",
+       " 'now',\n",
+       " 'if',\n",
+       " 'the',\n",
+       " 'implementation',\n",
+       " 'is',\n",
+       " 'hard',\n",
+       " 'to',\n",
+       " 'explain',\n",
+       " 'it',\n",
+       " 's',\n",
+       " 'a',\n",
+       " 'bad',\n",
+       " 'idea',\n",
+       " 'if',\n",
+       " 'the',\n",
+       " 'implementation',\n",
+       " 'is',\n",
+       " 'easy',\n",
+       " 'to',\n",
+       " 'explain',\n",
+       " 'it',\n",
+       " 'may',\n",
+       " 'be',\n",
+       " 'a',\n",
+       " 'good',\n",
+       " 'idea',\n",
+       " 'namespaces',\n",
+       " 'are',\n",
+       " 'one',\n",
+       " 'honking',\n",
+       " 'great',\n",
+       " 'idea',\n",
+       " 'let',\n",
+       " 's',\n",
+       " 'do',\n",
+       " 'more',\n",
+       " 'of',\n",
+       " 'those']"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "words = message.split()\n",
+    "words "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "id": "86041583",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'*right*',\n",
+       " 'a',\n",
+       " 'although',\n",
+       " 'ambiguity',\n",
+       " 'and',\n",
+       " 'are',\n",
+       " 'aren',\n",
+       " 'at',\n",
+       " 'bad',\n",
+       " 'be',\n",
+       " 'beats',\n",
+       " 'beautiful',\n",
+       " 'better',\n",
+       " 'break',\n",
+       " 'by',\n",
+       " 'cases',\n",
+       " 'complex',\n",
+       " 'complicated',\n",
+       " 'counts',\n",
+       " 'dense',\n",
+       " 'do',\n",
+       " 'dutch',\n",
+       " 'easy',\n",
+       " 'enough',\n",
+       " 'errors',\n",
+       " 'explain',\n",
+       " 'explicit',\n",
+       " 'explicitly',\n",
+       " 'face',\n",
+       " 'first',\n",
+       " 'flat',\n",
+       " 'good',\n",
+       " 'great',\n",
+       " 'guess',\n",
+       " 'hard',\n",
+       " 'honking',\n",
+       " 'idea',\n",
+       " 'if',\n",
+       " 'implementation',\n",
+       " 'implicit',\n",
+       " 'in',\n",
+       " 'is',\n",
+       " 'it',\n",
+       " 'let',\n",
+       " 'may',\n",
+       " 'more',\n",
+       " 'namespaces',\n",
+       " 'nested',\n",
+       " 'never',\n",
+       " 'not',\n",
+       " 'now',\n",
+       " 'obvious',\n",
+       " 'of',\n",
+       " 'often',\n",
+       " 'one',\n",
+       " 'only',\n",
+       " 'pass',\n",
+       " 'peters',\n",
+       " 'practicality',\n",
+       " 'preferably',\n",
+       " 'purity',\n",
+       " 'python',\n",
+       " 're',\n",
+       " 'readability',\n",
+       " 'refuse',\n",
+       " 'rules',\n",
+       " 's',\n",
+       " 'should',\n",
+       " 'silenced',\n",
+       " 'silently',\n",
+       " 'simple',\n",
+       " 'sparse',\n",
+       " 'special',\n",
+       " 't',\n",
+       " 'temptation',\n",
+       " 'than',\n",
+       " 'that',\n",
+       " 'the',\n",
+       " 'there',\n",
+       " 'those',\n",
+       " 'tim',\n",
+       " 'to',\n",
+       " 'ugly',\n",
+       " 'unless',\n",
+       " 'way',\n",
+       " 'you',\n",
+       " 'zen'}"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "unique_words = set(words)\n",
+    "unique_words"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "id": "46e4403b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "87"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(unique_words)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "id": "3436811b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['beautiful', 1],\n",
+       " ['the', 6],\n",
+       " ['break', 1],\n",
+       " ['easy', 1],\n",
+       " ['sparse', 1],\n",
+       " ['enough', 1],\n",
+       " ['peters', 1],\n",
+       " ['tim', 1],\n",
+       " ['flat', 1],\n",
+       " ['unless', 2],\n",
+       " ['ugly', 1],\n",
+       " ['readability', 1],\n",
+       " ['bad', 1],\n",
+       " ['let', 1],\n",
+       " ['than', 8],\n",
+       " ['refuse', 1],\n",
+       " ['nested', 1],\n",
+       " ['simple', 1],\n",
+       " ['explicitly', 1],\n",
+       " ['preferably', 1],\n",
+       " ['t', 1],\n",
+       " ['that', 1],\n",
+       " ['those', 1],\n",
+       " ['pass', 1],\n",
+       " ['you', 1],\n",
+       " ['and', 1],\n",
+       " ['practicality', 1],\n",
+       " ['special', 2],\n",
+       " ['better', 8],\n",
+       " ['zen', 1],\n",
+       " ['cases', 1],\n",
+       " ['it', 3],\n",
+       " ['of', 3],\n",
+       " ['hard', 1],\n",
+       " ['aren', 1],\n",
+       " ['re', 1],\n",
+       " ['in', 1],\n",
+       " ['complex', 2],\n",
+       " ['rules', 1],\n",
+       " ['dutch', 1],\n",
+       " ['first', 1],\n",
+       " ['good', 1],\n",
+       " ['to', 5],\n",
+       " ['often', 1],\n",
+       " ['are', 1],\n",
+       " ['errors', 1],\n",
+       " ['idea', 3],\n",
+       " ['beats', 1],\n",
+       " ['silenced', 1],\n",
+       " ['obvious', 2],\n",
+       " ['python', 1],\n",
+       " ['now', 2],\n",
+       " ['be', 3],\n",
+       " ['namespaces', 1],\n",
+       " ['temptation', 1],\n",
+       " ['by', 1],\n",
+       " ['do', 2],\n",
+       " ['ambiguity', 1],\n",
+       " ['face', 1],\n",
+       " ['not', 1],\n",
+       " ['one', 3],\n",
+       " ['purity', 1],\n",
+       " ['guess', 1],\n",
+       " ['counts', 1],\n",
+       " ['at', 1],\n",
+       " ['only', 1],\n",
+       " ['is', 10],\n",
+       " ['honking', 1],\n",
+       " ['if', 2],\n",
+       " ['great', 1],\n",
+       " ['way', 2],\n",
+       " ['silently', 1],\n",
+       " ['there', 1],\n",
+       " ['s', 2],\n",
+       " ['never', 3],\n",
+       " ['a', 2],\n",
+       " ['implementation', 2],\n",
+       " ['may', 2],\n",
+       " ['explain', 2],\n",
+       " ['complicated', 1],\n",
+       " ['*right*', 1],\n",
+       " ['dense', 1],\n",
+       " ['implicit', 1],\n",
+       " ['although', 3],\n",
+       " ['explicit', 1],\n",
+       " ['should', 2],\n",
+       " ['more', 1]]"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fre_words = [] #phần tử [word, frequency]\n",
+    "for word in unique_words:\n",
+    "    fre_words.append([word, words.count(word)])\n",
+    "fre_words"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "id": "42fc967d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['is', 10],\n",
+       " ['than', 8],\n",
+       " ['better', 8],\n",
+       " ['the', 6],\n",
+       " ['to', 5],\n",
+       " ['it', 3],\n",
+       " ['of', 3],\n",
+       " ['idea', 3],\n",
+       " ['be', 3],\n",
+       " ['one', 3],\n",
+       " ['never', 3],\n",
+       " ['although', 3],\n",
+       " ['unless', 2],\n",
+       " ['special', 2],\n",
+       " ['complex', 2],\n",
+       " ['obvious', 2],\n",
+       " ['now', 2],\n",
+       " ['do', 2],\n",
+       " ['if', 2],\n",
+       " ['way', 2],\n",
+       " ['s', 2],\n",
+       " ['a', 2],\n",
+       " ['implementation', 2],\n",
+       " ['may', 2],\n",
+       " ['explain', 2],\n",
+       " ['should', 2],\n",
+       " ['beautiful', 1],\n",
+       " ['break', 1],\n",
+       " ['easy', 1],\n",
+       " ['sparse', 1],\n",
+       " ['enough', 1],\n",
+       " ['peters', 1],\n",
+       " ['tim', 1],\n",
+       " ['flat', 1],\n",
+       " ['ugly', 1],\n",
+       " ['readability', 1],\n",
+       " ['bad', 1],\n",
+       " ['let', 1],\n",
+       " ['refuse', 1],\n",
+       " ['nested', 1],\n",
+       " ['simple', 1],\n",
+       " ['explicitly', 1],\n",
+       " ['preferably', 1],\n",
+       " ['t', 1],\n",
+       " ['that', 1],\n",
+       " ['those', 1],\n",
+       " ['pass', 1],\n",
+       " ['you', 1],\n",
+       " ['and', 1],\n",
+       " ['practicality', 1],\n",
+       " ['zen', 1],\n",
+       " ['cases', 1],\n",
+       " ['hard', 1],\n",
+       " ['aren', 1],\n",
+       " ['re', 1],\n",
+       " ['in', 1],\n",
+       " ['rules', 1],\n",
+       " ['dutch', 1],\n",
+       " ['first', 1],\n",
+       " ['good', 1],\n",
+       " ['often', 1],\n",
+       " ['are', 1],\n",
+       " ['errors', 1],\n",
+       " ['beats', 1],\n",
+       " ['silenced', 1],\n",
+       " ['python', 1],\n",
+       " ['namespaces', 1],\n",
+       " ['temptation', 1],\n",
+       " ['by', 1],\n",
+       " ['ambiguity', 1],\n",
+       " ['face', 1],\n",
+       " ['not', 1],\n",
+       " ['purity', 1],\n",
+       " ['guess', 1],\n",
+       " ['counts', 1],\n",
+       " ['at', 1],\n",
+       " ['only', 1],\n",
+       " ['honking', 1],\n",
+       " ['great', 1],\n",
+       " ['silently', 1],\n",
+       " ['there', 1],\n",
+       " ['complicated', 1],\n",
+       " ['*right*', 1],\n",
+       " ['dense', 1],\n",
+       " ['implicit', 1],\n",
+       " ['explicit', 1],\n",
+       " ['more', 1]]"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sorted(fre_words, key=lambda x: x[1], reverse=True)  # sort by frequency in descending order"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a5f10097",
    "metadata": {},
    "outputs": [],
    "source": []
