--- a/Lesson3.ipynb
+++ b/Lesson3.ipynb
@@ -1124,8 +1124,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 91,
    "id": "4653d76b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ham in ra từ xin chao\n"
+     ]
+    }
+   ],
+   "source": [
+    "# in ra docstring của một function\n",
+    "print(xinchao.__doc__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3c3dd953",
    "metadata": {},
    "outputs": [],
    "source": []
